# menu-scraper

./: .gitignore  README.md
menu-scraper/: .env.example  Cargo.toml  compose.yml
menu-scraper/migrations/: 20231220205236_init.down.sql  20231220205236_init.up.sql
menu-scraper/src/: main.rs
menu-scraper/src/app/: errors.rs  mod.rs
menu-scraper/src/app/forms/: group_creation.rs  group_edit.rs  login.rs  lunch.rs  menu.rs  mod.rs  ordering.rs  registration.rs  user_add_in_group.rs  user_delete_from_group.rs  user_edit.rs  user_search.rs  vote.rs
menu-scraper/src/app/handlers/: auth.rs  error.rs  group.rs  index.rs  lunch.rs  menu.rs  mod.rs  registration.rs  restaurant.rs  user.rs  user_edit.rs  vote.rs
menu-scraper/src/app/templates/: error.rs  group.rs  index.rs  login.rs  lunch.rs  menu.rs  mod.rs  nav.rs  registration.rs  restaurant.rs  user_edit.rs  user_group.rs  user_group_preview.rs  user_preview_list.rs
menu-scraper/src/app/utils/: date.rs  error.rs  mod.rs  password.rs  picture.rs  validation.rs
menu-scraper/src/app/view_models/: group.rs  lunch.rs  menu.rs  mod.rs  restaurant.rs  signed_user.rs  user_edit.rs  user_preview.rs
menu-scraper/src/db/: mod.rs
menu-scraper/src/db/common/: error.rs  mod.rs  query_parameters.rs  repository.rs  run_migration.rs
menu-scraper/src/db/models/: group.rs  lunch.rs  menu.rs  mod.rs  restaurant.rs  user.rs  vote.rs
menu-scraper/src/db/repositories/: group.rs  lunch.rs  menu.rs  mod.rs  restaurant.rs  user.rs  vote.rs
menu-scraper/src/scrapping/service/: mod.rs  scraping_service.rs  service.rs
menu-scraper/static/css/: error.css  form.css  group_form.css  group_index.css  login.css  lunch_preview-list.css  lunch_preview_list.css  menu_index.css  popup.css  registration.css  restaurant.css  style.css
menu-scraper/templates/: create_lunch_button.html  create_lunch_form.html  error.html  group_creation.html  group_details.html  group_edit.html  group_lunch_menus.html  groups.html  index.html  login.html  lunch_preview_list.html  menu.html  menu_index.html  menu_list.html  menu_with_restaurant.html  nav.html  registration.html  restaurant.html  user_edit.html  user_group.html  user_group_preview.html  user_preview_list.html
menu-scraper/tests/: tests.rs
menu-scraper/tests/fixtures/: sample_data.sql
(+3 files in other folders)
