[package]
name = "menu-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.74" }
chrono = { version = "0.4.31" }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0" }