[package]
name = "menu-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
name = "db"
path = "src/lib.rs"

[dependencies]
actix-files = "0.6"
actix-web = "4.4.0"
actix-multipart = "0.6.1"
askama = "0.12.1"
anyhow = "1.0.75"
dotenvy = "0.15.7"
async-trait = { version = "0.1.74" }
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "bigdecimal"] }
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.108"
log = { version = "0.4.20", features = [] }
env_logger = "0.10.1"
thiserror = "1.0.50"
regex = "1.5"
argon2 = "0.5.2"
