[package]
name = "menu-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webserver"
path = "src/main.rs"

[lib]
name = "db"
path = "src/lib.rs"

[dependencies]
async-trait = { version = "0.1.74" }
chrono = { version = "0.4.31" }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "bigdecimal"] }
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0" }
serde = { version = "1.0.195", features = ["derive"] }
scraper = { version = "0.18.1" }
reqwest = { version = "0.11.23", features = ["blocking"] }
regex = { version = "1.10.3" }
actix-web = { version = "4.4.1" }
anyhow = { version = "1.0.79" }